; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_sha512-internal.c_sha512_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_sha512-internal.c_sha512_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sha512_state = type { i8**, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sha512_init(%struct.sha512_state* %0) #0 {
  %2 = alloca %struct.sha512_state*, align 8
  store %struct.sha512_state* %0, %struct.sha512_state** %2, align 8
  %3 = load %struct.sha512_state*, %struct.sha512_state** %2, align 8
  %4 = getelementptr inbounds %struct.sha512_state, %struct.sha512_state* %3, i32 0, i32 2
  store i64 0, i64* %4, align 8
  %5 = load %struct.sha512_state*, %struct.sha512_state** %2, align 8
  %6 = getelementptr inbounds %struct.sha512_state, %struct.sha512_state* %5, i32 0, i32 1
  store i64 0, i64* %6, align 8
  %7 = call i8* @CONST64(i32 -205731576)
  %8 = load %struct.sha512_state*, %struct.sha512_state** %2, align 8
  %9 = getelementptr inbounds %struct.sha512_state, %struct.sha512_state* %8, i32 0, i32 0
  %10 = load i8**, i8*** %9, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 0
  store i8* %7, i8** %11, align 8
  %12 = call i8* @CONST64(i32 -2067093701)
  %13 = load %struct.sha512_state*, %struct.sha512_state** %2, align 8
  %14 = getelementptr inbounds %struct.sha512_state, %struct.sha512_state* %13, i32 0, i32 0
  %15 = load i8**, i8*** %14, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i64 1
  store i8* %12, i8** %16, align 8
  %17 = call i8* @CONST64(i32 -23791573)
  %18 = load %struct.sha512_state*, %struct.sha512_state** %2, align 8
  %19 = getelementptr inbounds %struct.sha512_state, %struct.sha512_state* %18, i32 0, i32 0
  %20 = load i8**, i8*** %19, align 8
  %21 = getelementptr inbounds i8*, i8** %20, i64 2
  store i8* %17, i8** %21, align 8
  %22 = call i8* @CONST64(i32 1595750129)
  %23 = load %struct.sha512_state*, %struct.sha512_state** %2, align 8
  %24 = getelementptr inbounds %struct.sha512_state, %struct.sha512_state* %23, i32 0, i32 0
  %25 = load i8**, i8*** %24, align 8
  %26 = getelementptr inbounds i8*, i8** %25, i64 3
  store i8* %22, i8** %26, align 8
  %27 = call i8* @CONST64(i32 -1377402159)
  %28 = load %struct.sha512_state*, %struct.sha512_state** %2, align 8
  %29 = getelementptr inbounds %struct.sha512_state, %struct.sha512_state* %28, i32 0, i32 0
  %30 = load i8**, i8*** %29, align 8
  %31 = getelementptr inbounds i8*, i8** %30, i64 4
  store i8* %27, i8** %31, align 8
  %32 = call i8* @CONST64(i32 725511199)
  %33 = load %struct.sha512_state*, %struct.sha512_state** %2, align 8
  %34 = getelementptr inbounds %struct.sha512_state, %struct.sha512_state* %33, i32 0, i32 0
  %35 = load i8**, i8*** %34, align 8
  %36 = getelementptr inbounds i8*, i8** %35, i64 5
  store i8* %32, i8** %36, align 8
  %37 = call i8* @CONST64(i32 -79577749)
  %38 = load %struct.sha512_state*, %struct.sha512_state** %2, align 8
  %39 = getelementptr inbounds %struct.sha512_state, %struct.sha512_state* %38, i32 0, i32 0
  %40 = load i8**, i8*** %39, align 8
  %41 = getelementptr inbounds i8*, i8** %40, i64 6
  store i8* %37, i8** %41, align 8
  %42 = call i8* @CONST64(i32 327033209)
  %43 = load %struct.sha512_state*, %struct.sha512_state** %2, align 8
  %44 = getelementptr inbounds %struct.sha512_state, %struct.sha512_state* %43, i32 0, i32 0
  %45 = load i8**, i8*** %44, align 8
  %46 = getelementptr inbounds i8*, i8** %45, i64 7
  store i8* %42, i8** %46, align 8
  ret void
}

declare dso_local i8* @CONST64(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
